--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-
+*.pyc
 # C extensions
 *.so
 
@@ -52,3 +52,5 @@ docs/_build/
 
 # PyBuilder
 target/
+
+*.pyc
